# fastapi-yolo-video-service

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
src/: config.py  main.py  minio_client.py  redis_client.py
src/get_video/: __init__.py  router.py  schemas.py  service.py
src/load_video/: __init__.py  router.py  schemas.py  service.py  utils.py
src/load_video/from_url/: __init__.py  router.py  service.py
src/track_video/: __init__.py  schemas.py  service.py  utils.py
