[project]
name = "fastapi-yolo-video-service"
version = "0.1.0"
description = "Simple backend using YOLO to annotate videos"
requires-python = "==3.12.*"
dependencies = [
    "annotated-types~=0.7.0",
    "fastapi~=0.115.12",
    "ffmpeg-python~=0.2.0",
    "pydantic~=2.11.3",
    "pydantic-core~=2.33.1",
    "seaborn~=0.13.2",
    "ultralytics~=8.3.118",
    "uvicorn~=0.34.2",
    "wheel~=0.45.1",
    "yt-dlp~=2025.3.31",
]
